Integrated records API with Main (hardcoded for time being)

--- a/students-main/src/main/resources/application.properties
+++ b/students-main/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port = 9090 
 spring.application.name = students-main
+
+
+
+#spring.application.name = students-main	     	 server.port = 9090
+#spring.application.name = students-records      	 server.port = 9091
+#spring.application.name = students-results      	 server.port = 9092
+#spring.application.name = students-attendence       server.port = 9093
